it's done!! sending to coauthors

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -29,7 +29,7 @@
 
 
 \affil[1]{School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia.}
-\affil[2]{School of Natural Resources and the Enviornment, The University of Arizona, Tucson, USA}
+\affil[2]{School of Natural Resources and the Environment, The University of Arizona, Tucson, USA}
 \affil[3]{Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand}
 
 %\setcounter{page}{54}
