comments on abstract

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -19,7 +19,7 @@
     \usepackage{changepage}
     \usepackage[table,xcdraw]{xcolor}
 
-\title{Estimating interaction networks for diverse, single-trophic communities}
+\title{Estimating interaction networks/matrices? for diverse, single-trophic communities}
 
 
 \author[1]{Malyon D. Bimler}
@@ -37,15 +37,15 @@
 \begin{document}
 \maketitle  
 \newpage
-\linenumbers
+% \linenumbers
 
 
 \section{Abstract}
     
     \begin{enumerate}
     \item Understanding ecological communities requires an understanding of how the different species within it relate to one another. Those relationships are difficult to quantify in single trophic systems such as plant communities because they cannot be directly observed as in food webs or other species interaction networks, and must instead be inferred by other means. Current methods are inadequate for natural complex communities because they tend to rely on co-occurrence patterns (inaccurate) or intensive experimental designs (time-consuming, especially for many species). 
-    \item We describe a general framework which allows us to estimate competitive and facilitative pair-wise interactions in diverse plant communities from empirical data and population dynamics models. This framework requires a multi-tiered approach to resolve all interactions. We first apply individual fitness models to each species in order to estimate interactions between species commonly observed to co-occur. We then use the resulting interactions to approximate interactions which were not observed using a different set of assumptions. 
-    \item This approach is modelled using a Bayesian statistical framework which allows us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix. We provide the model code applied to an annual plant population dynamic model, and illustrate certain features of the resulting interaction networks with a case study on australian wildflowers.  
+    \item We describe a general framework which allows us to estimate competitive and facilitative pair-wise interactions in diverse plant communities from empirical observations of performance (e.g. fecundity). This framework requires a multi-tiered approach to resolve all interactions. We first apply neighbour density-dependent performance models / individual fitness models to each species in order to estimate interactions between species commonly observed to co-occur. We then use the resulting interactions to approximate interactions which were not observed using a different set of assumptions. 
+    \item This approach is modelled using a Bayesian statistical framework which allows us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix. We illustrate the potential uses of this method by applying it to a case study on australian wildflowers and provide the model code in the STAN programming language. We show how to scale the resulting interaction matrix into per-capita effects by integrating the above model framework in an annual plant population dynamic model. This particular application can be of wide use to both ecosystem management and improving our understanding of community diversity and stability.
     \end{enumerate}
 
 
@@ -55,7 +55,7 @@
     Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \citep{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \citep{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \citep{Dunne2002}. There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions, but non-trophic interactions such as those occurring between plants are largely neglected \citep{Ellison2019}. This is unfortunate, as recent work indicates that non-trophic interactions and plant diversity alter food web structure, stability and diversity functioning relationships \citep{Hammill2015, Giling2019, Zhao2019, Miele2019}. Integrating plant and trophic networks remains a key challenge in improving our understanding of community dynamics and persistence \citep{Godoy2018c}. 
 
     \paragraph{}
-    Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. One approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \citep{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models (for example with the Beverton-Holt model \citet{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and it's effects on biodiversity \citep{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between a few number of species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of overparameterisation. Futhermore, the plant population models typically used force interactions to be competitive rather than allowing for facilitative interactions, which are both widespread and important for plant community dynamics \citep{}.
+    Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. One approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \citep{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models (for example with the Beverton-Holt model \citet{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and its effects on biodiversity \citep{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between few species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of overparameterisation. Futhermore, the plant population models typically used force interactions to be competitive rather than allowing for facilitative interactions, which are both widespread and important for plant community dynamics \citep{}.
 
     \paragraph{} 
     A common alternative which is less demanding, and scalable to high-diversity systems is the use of association, or co-occurrence networks. Plant interactions are inferred by measuring positive and negative spatial associations between species (e.g. \citet{Saiz2011}), resulting in networks which capture a variety of factors including biotic interactions \citep{Losapio2019}. This approach requires data which is much more easily obtainable and can naturally handle a large number of species. A wide range of packages are available in R to deduce association networks, alongside further tools and methods to better infer plant interactions from spatial distribution patterns \citep{Keil2019}, for example by including environmental covariates. Spatial association networks however, have been found to remain poor predictors of species interactions and rarely match empirical estimates \citep{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
