--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -49,9 +49,11 @@
     
     \begin{enumerate}
     \item Understanding ecological communities requires an understanding of how the different species within it relate to one another. Those relationships are difficult to quantify in single trophic systems such as plant communities because they cannot be directly observed as in food webs or other species interaction networks, and must instead be inferred by other means. Current methods are inadequate for natural complex communities because they tend to rely on co-occurrence patterns (inaccurate) or intensive experimental designs (time-consuming, especially for many species). 
-    \item We describe a general framework which allows us to estimate competitive and facilitative pair-wise interactions in diverse plant communities from empirical observations of performance (e.g. fecundity). This framework requires a multi-tiered approach to resolve all interactions. We first apply neighbour density-dependent performance models to each species in order to estimate interactions between species commonly observed to co-occur. We then use the resulting interactions to approximate interactions which were not observed using a different set of assumptions. 
-    \item This approach is modelled using a Bayesian statistical framework which allows us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix. We illustrate the potential uses of this method by applying it to a case study on australian wildflowers and provide the model code in the STAN programming language. We show how to scale the resulting interaction matrix into per-capita effects by integrating the above model framework in an annual plant population dynamic model. This particular application can be of wide use to both ecosystem management and improving our understanding of community diversity and stability.
+    \item We describe a general framework which allows us to estimate competitive and facilitative pair-wise interactions in diverse plant communities from empirical observations of performance (e.g. fecundity). This framework requires a multi-tiered approach to resolve all interactions. We first apply individual fitness models models to each species in order to estimate interactions between species commonly observed to co-occur. We then use the resulting interactions to approximate interactions which were not observed using a different set of assumptions. 
+    \item This approach is modelled using a Bayesian statistical framework which allows us to estimate interactions coefficients despite high model complexity, as well as quantify the uncertainty around the resulting community matrix. We provide the model code in the STAN programming language. We illustrate the potential uses of this method by applying it to a case study on australian wildflowers and show how to scale the resulting interaction matrix into per-capita effects by integrating the above model framework in an annual plant population dynamic model. This particular application can be of wide use to both ecosystem management and improving our understanding of community diversity and stability.
     \end{enumerate}
+
+% neighbour density-dependent performance models
 
 
 \section{Introduction}
@@ -77,13 +79,9 @@
     \begin{itemize}
         \item observations of focal individuals record a proxy for lifetime reproductive success (e.g. seed production, stem diameter growth, above-ground biomass)
         \item these observations also record the identity and abundance of neighbours within the interaction neighbourhood of each focal individual
-        \item observations are replicated across several individuals of each focal species with varying neighbourhoods
+        \item observations are replicated across several individuals of each focal species
     \end{itemize}
     In addition to these requirements, any experimental design or data which may reduce confounding effects between environment and competition will provide more accurate estimates of interaction strengths (e.g. thinning certain plots, recording environmental data known to affect reproductive success). 
-    
-    \paragraph{}   
-    This framework also depends on an appropriate model of population dynamics for the system in question. The population dynamics model may require species-specific measures of certain key demographic rates (e.g. mortality, seedling survival). These rates are necessary in order to scale interaction coefficients such that they are comparable between species. 
-    
     
     \subsection{Individual Fitness Model}
         
@@ -100,39 +98,65 @@
     \subsection{Unrealised links}
     
         \paragraph{}
-        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the IFM above will not be able to estimate all potential interactions ($\beta$) between species. This is especially true for rare species. %In order to estimate the interactions missing from the IFM, we must separate those interaction which did not occur due to chance alone (\textit{unrealised links}) from those which cannot occur due to mismatches between species (\textit{forbidden links}). 
-        
-        % \subsubsection{Forbidden links}
-        
-        % \textit{Forbidden links} are those where two species cannot interact, because they cannot co-occur or are physiologically mismatched. An example from the food web literature would be a bird which cannot eat fruit which are too big for its beak. In plants, forbidden links can occur when species are spatially or temporally mismatched, due to different environmental requirements or varying phenologies. Forbidden links may also occur between species which have vastly different resource requirements such that the presence of one species does not affect the other, though in plants these require a great detail of physiological knowledge. In this paper, we limit ourselves to estimating forbidden links from spatial mismatches. \\
-        
-        % \textbf{Note: I dropped the section above as very very few interactions were 'forbidden' but I can bring it back?}
-
-        %\subsubsection{Unrealised links}
-        
-        %Because sampling a community is not an exhaustive process, interactions between certain species may not have been observed even though the species in question are capable of interacting. 
+        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the IFM above will not be able to estimate all potential interactions ($\beta$) between species. This is especially true for rare species. 
         These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the IFMs. This model is described as the response-effect model (REM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
         
         \begin{equation}
-        F_{i} = \beta_{i0} - \sum_{i}^{j} r_{i} e_{j} N_{j}
+        F_{i} = \beta_{i0} - r_{i} \sum_{i}^{j} e_{j} N_{j}
         \label{rem1}
         \end{equation}
         
         Pairwise interactions which are missing from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. In order to allow both the IFM and REM interaction estimates to contribute to the likelihood, we first used the IFM to quantify observed interactions and then used those to estimate species-specific $r$ and $e$ parameters such that: 
     
         \begin{equation}
-        r_i e_j \sim logistic \left ( \alpha_{ij}, \sigma \right )
+        r_i e_j \sim logistic \left ( \beta_{ij}, \sigma \right )
         \label{unrealised}
         \end{equation}
     
-        where $\sigma$ is a community-level scale parameter for the logistic distribution. 
-        
-    \subsection{Scaling the interactions}
+        where $\sigma$ is a community-level scale parameter for the logistic distribution. We use a logistic distribution here because the heavier tails make it a slightly weaker informative prior than a normal distribution. $\sigma$ defines how widely the tails extend and can be expressed in terms of the standard deviation, this is set to the same value across all interactions. \textbf{rephrase}
+
+	\subsection{Model fitting}
+
+        \paragraph{}        
+        The IFMs (Eq. 1) and the REM (Eq. 2) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify \textit{realised} interactions which are then fed into the REM. We provide a working example of the STAN file used to specify and set this model to the case study below in the Supplementary Information. From this file, only the link function for $F_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. In the code given, a negative binomial distribution is used to fit seed production ($F_i$) but a different distribution may be more appropriate when using other proxies for lifetime reproductive success.   
+
+        \paragraph{}
+        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. \textcite{Ellison2004} also provides an accessible review of parameter estimate and the use of posterior distributions using a worked example on ant species richness data.
+
+        %----------------------------------
+
+    \section{Case study}
+
+    	We present the model framework described above to a case study of annual wildlflower plants. 
+
+    	\subsection{Data}
+
+        \paragraph{}
+        We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitored over the length of the full field season, from July to October. The resulting dataset contains from 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and abundances of all neighbouring individuals within the interaction neighbourhood of the focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species. Total neighbourhood diversity was 71 species, of which 20 species were recorded fewer than 10 times across all observations. The species-specific effects of this latter group of species on focals were deemed negligible due to their extremely low abundance, they were thus grouped into an 'other' category and their effects on focals averaged. Half of all plots were thinned (a quarter to 60\% diversity and a quarter to 30\%) to mitigate possible confounding effects between plot location and plant density, and did not target any particular species.
+
+        \paragraph{} 
+        We required species demographic rates (seed and germination) in order to couch our results into a model of population dynamics.
+        Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability. The remaining species were assigned mean demographic rates from these experiments. 
+
+		\subsection{Model fitting}
+
+        \paragraph{}
+        We fit the model using R version 3.6.3, STAN and the rstan package \parencite{R2020, Carpenter2017, Rstan2020}, running 4 chains of 5000 iterations each and discarding the first 1000. Models were checked for convergence and traceplots were visually inspected to verify good chain behaviour and mixing. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our interaction estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
+
+        \subsection{Integrating results into a model of population dynamics}
+
+        \paragraph{}
+        We adapted the framework described here to work with a well-supported annual plant population model with a seed bank \parencite{Bimler2018}. Equations for the annual plant model are further described in Chapter 4. 
+
+            \paragraph{}   
+    This framework also depends on an appropriate model of population dynamics for the system in question. The population dynamics model may require species-specific measures of certain key demographic rates (e.g. mortality, seedling survival). These rates are necessary in order to scale interaction coefficients such that they are comparable between species. 
+
+    
+
+       \subsection{Scaling the interactions}
         
         \paragraph{}
-        After applying the IFMs and estimating the remaining \textit{unrealised} interactions, the interactions effects returned by Eq. 1 and 2 must be scaled with appropriate demographic parameters determined by the system-specific model of population dynamics. This transformation puts interactions on the same scale, returning per-capita effects which are directly comparable between species (${\beta}''$) \parencite{Godoy2014, Bimler2018}. 
-        
-        In order to determine the appropriate scaling, the model must first be transformed into a form equivalent to a Lotka-Volterra competition model: 
+        After applying the IFMs and estimating the remaining \textit{unrealised} interactions, we scale the interactions effects returned by Eq. 1 and 2 with appropriate demographic parameters determined by the system-specific model of population dynamics. This transformation puts interactions on the same scale, returning per-capita effects which are directly comparable between species (${\beta}''$) \parencite{Godoy2014, Bimler2018}. In order to determine the appropriate scaling, we transform the model into a form equivalent to a Lotka-Volterra competition model: 
 
         \begin{equation}
         F_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
@@ -146,26 +170,11 @@
         \label{scaling}
         \end{equation}
 
-        The exact form of the rescaled interactions will vary depending on the population dynamic model applied and may include other demographic rates wich reflect species-level differences in growth and mortality.
-        
-    \subsection{Model fitting}
+        The exact form of the rescaled interactions will vary depending on the population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality.
+    
+    
 
-        \paragraph{}        
-        The IFMs (Eq. 1) and the REM (Eq. 2) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify \textit{realised} interactions which are then fed into the REM. We provide a working example of the STAN file used to specify and set the model for our annual plant case study (see below) in S.I. XX. From this file, only the form of the population dynamic model and the priors need to be modified in order to apply it to a different model or system. 
 
-        \paragraph{}
-        STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. 
-
-    \subsection{Case study}
-
-        \paragraph{}
-        We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitered over the length of the full field season, from July to October. The resulting dataset contains from 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and abundances of all neighbouring individuals within the interaction neighbourhood of the focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species. Neighbouring species which were recorded less than 10 times overall were grouped into a 'rare' category. Half of all plots were thinned (a quarter to 60\% diversity and a quarter to 30\%) to mitigate possible confounding effects between plot location and plant density, and did not target any particular species.
-
-        \paragraph{}
-        We adapted the framework described here to work with a well-supported annual plant population model with a seed bank \parencite{Bimler2018}. Equations for the annual plant model are further described in Chapter 4. Species demographic rates (seed and germination) for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability. The remaining species were assigned mean demographic rates from these experiments. 
-
-        \paragraph{}
-        We applied the model using R version 3.6.3, STAN and the rstan package \parencite{R2020, Carpenter2017, Rstan2020}, running 4 chains of 5000 iterations each and discarding the first 1000. Models were checked for convergence and traceplots were visually inspected to verify good chain behaviour and mixing. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our interaction estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
 
 
 \section{Results}
